--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,9 @@
 	--blue: #ff5500;
 }
 
+html>div[style] {
+	display: none !important;
+}
 
 * {
 	font-family: "Poppins";
@@ -22,86 +25,6 @@
 	z-index: 1;
 	user-select: text !important;
 }
-
-.section {
-	position: relative;
-	z-index: 999 !important;
-}
-
-.modal-dialog-scrollable .modal-content {
-	filter: invert(1);
-}
-
-.modal-content {
-	height: 90vh;
-}
-
-body.modal-open {
-	overflow-y: hidden;
-	overflow-x: hidden;
-}
-
-
-.modal-body {
-	padding: 0;
-	margin: 0;
-}
-
-/* Templates */
-
-.button {
-	background: rgba(72, 72, 72, 0.7);
-	backdrop-filter: blur(30px);
-	border: none;
-	border-radius: 3px 10px;
-	padding: 20px 55px;
-	font-size: 14px;
-	font-weight: 400;
-	letter-spacing: -0.02e;
-	color: var(--white);
-	cursor: pointer;
-}
-
-.button-small {
-	background: rgba(72, 72, 72, 0.7);
-	backdrop-filter: blur(30px);
-	border: none;
-	border-radius: 3px 10px;
-	padding: 10px 15px;
-	font-size: 14px;
-	font-weight: 400;
-	letter-spacing: -0.02e;
-	color: var(--white);
-	cursor: pointer;
-}
-
-.button:hover,
-.button-small:hover {
-	color: var(--dark);
-	background: var(--white);
-	transition-duration: 300ms;
-}
-
-
-.backdrop-header {
-	background: rgba(0, 0, 0, 0.85) !important;
-}
-/* if backdrop support: very transparent and blurred */
-@supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
-	.backdrop-header {
-		background: rgba(0, 0, 0, 0.4) !important;
-		-webkit-backdrop-filter: blur(6px) !important;
-		backdrop-filter: blur(6px) !important;
-	}
-}
-
-/* End */
-
-
-.tech_p {
-	padding-bottom: 40px;
-}
-
 
 body {
 	background: url(assets/images/bg-demo.gif);
@@ -152,9 +75,75 @@ a {
 	text-decoration: none;
 }
 
+.container {
+	max-width: 1300px;
+	margin: auto;
+}
+
+/* Templates */
+
+.button {
+	background: rgba(72, 72, 72, 0.7);
+	backdrop-filter: blur(30px);
+	border: none;
+	border-radius: 3px 10px;
+	padding: 20px 55px;
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: -0.02e;
+	color: var(--white);
+	cursor: pointer;
+}
+
+.button-small {
+	background: rgba(72, 72, 72, 0.7);
+	backdrop-filter: blur(30px);
+	border: none;
+	border-radius: 3px 10px;
+	padding: 10px 15px;
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: -0.02e;
+	color: var(--white);
+	cursor: pointer;
+}
+
+.button:hover,
+.button-small:hover {
+	color: var(--dark);
+	background: var(--white);
+	transition-duration: 300ms;
+}
+
+
+.backdrop-header {
+	background: rgba(0, 0, 0, 0.85) !important;
+}
+
+@supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
+	.backdrop-header {
+		background: rgba(0, 0, 0, 0.4) !important;
+		-webkit-backdrop-filter: blur(6px) !important;
+		backdrop-filter: blur(6px) !important;
+	}
+}
+
+/* End */
+
+/* Section Heading */
+
+.tech_p {
+	padding-bottom: 40px;
+}
+
 section {
 	min-height: 100vh;
 	scroll-snap-align: start;
+}
+
+.section {
+	position: relative;
+	z-index: 999 !important;
 }
 
 .section>h1 {
@@ -204,14 +193,8 @@ section {
 	transition-duration: 300ms;
 }
 
-.container {
-	max-width: 1300px;
-	margin: auto;
-}
-
 .section-head {
 	text-align: center;
-	/*animation: heading 1s ease forwards;*/
 }
 
 .section-head>.hr {
@@ -241,6 +224,20 @@ section {
 	letter-spacing: 1.5px;
 }
 
+
+.main {
+	opacity: 0;
+	min-height: 100vh;
+	animation: scale 0.7s ease-in forwards;
+	animation-delay: 500ms;
+}
+
+.main p {
+	font-size: 16px;
+}
+
+/*  heading animations  */
+
 @keyframes heading {
 	0% {
 		transform: translateY(-50px);
@@ -250,6 +247,22 @@ section {
 		transform: translateY(0px);
 	}
 }
+
+@keyframes scale {
+	0% {
+		transform: scale3D(0.1);
+		opacity: 0;
+	}
+
+	100% {
+		transform: scale3D(1);
+		opacity: 1;
+	}
+}
+
+/*  End  */
+
+/* Scroll Bar */
 
 ::-webkit-scrollbar {
 	width: 10px;
@@ -270,30 +283,34 @@ section {
 	background: #555;
 }
 
-.main {
-	opacity: 0;
-	min-height: 100vh;
-	animation: scale 0.7s ease-in forwards;
-	animation-delay: 500ms;
+/* End */
+
+/* Contact Modal */
+
+.modal-dialog-scrollable .modal-content {
+	filter: invert(1);
 }
 
-.main p {
-	font-size: 16px;
+.modal-content {
+	height: 90vh;
 }
 
-@keyframes scale {
-	0% {
-		transform: scale3D(0.1);
-		opacity: 0;
-	}
-
-	100% {
-		transform: scale3D(1);
-		opacity: 1;
-	}
+body.modal-open {
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
+
+
+.modal-body {
+	padding: 0;
+	margin: 0;
+}
+
+/* End */
+
 
 /* Pagination */
+
 pagination-template .ngx-pagination {
 	margin-top: 20px;
 	justify-content: center;
@@ -370,3 +387,5 @@ pagination-template .ngx-pagination li.pagination-previous a::before,
 pagination-template .ngx-pagination li.pagination-previous::before {
 	display: none !important;
 }
+
+/* End */
